some more cleanup, remove module aim for now